--- a/app/src/main/res/layout/fragment_board_main.xml
+++ b/app/src/main/res/layout/fragment_board_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,17 +12,20 @@
         android:layout_marginTop="30dp">
 
         <EditText
+            android:id="@+id/editText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/searchEditText"
-            android:id="@+id/editText"
             android:layout_weight="2"
-            android:inputType="text"/>
+            android:hint="@string/searchEditText"
+            android:inputType="text"
+            tools:ignore="TouchTargetSizeCheck" />
+
         <ImageButton
+            android:id="@+id/searchButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/searchButton"
             android:background="@drawable/search_icon"
+            android:contentDescription="search button"
             android:scaleType="fitXY" />
 
     </LinearLayout>
@@ -37,12 +41,14 @@
             android:text="@string/filterButton"
             android:textStyle="bold"
             android:layout_marginEnd="15dp"/>
+
         <ImageButton
+            android:id="@+id/startWriteButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/startWriteButton"
             android:background="@drawable/write_icon"
-            android:scaleType="fitXY"/>
+            android:contentDescription="start writing button"
+            android:scaleType="fitXY" />
 
 
     </LinearLayout>
