--- a/app/src/main/res/layout/fragment_my_home.xml
+++ b/app/src/main/res/layout/fragment_my_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -74,24 +75,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_home_profile_cl"
-        app:layout_constraintBottom_toBottomOf="parent">
-    <!-- 그래프 -->
+        tools:ignore="SpeakableTextPresentCheck"
+        tools:layout_editor_absoluteX="20dp">
+        <!-- 그래프 -->
         <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/my_home_graph_cl"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/my_home_sclayout"
-        app:layout_constraintStart_toStartOf="@+id/my_home_sclayout"
-        app:layout_constraintTop_toBottomOf="@id/my_home_sclayout">
+            android:id="@+id/my_home_graph_cl"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="@+id/my_home_sclayout"
+            app:layout_constraintStart_toStartOf="@+id/my_home_sclayout"
+            app:layout_constraintTop_toBottomOf="@id/my_home_sclayout">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     </ScrollView>
