--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -49,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:ems="10"
-                    android:hint="비밀번호"
+                    android:hint="비밀번호 : 8자리 이상"
                     android:inputType="textPassword" />
 
                 <EditText
@@ -83,7 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="생년월일"
+                    android:hint="생년월일 : 6자리 이상"
                     android:inputType="date"/>
 
                 <EditText
