게시판 프레그멘트 메인액티비티와 연결하고 파이어베이스에서 게시판 정보 불러와서 화면에 출력하기, 완성 X

--- a/app/src/main/res/layout/fragment_board_main.xml
+++ b/app/src/main/res/layout/fragment_board_main.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="30dp">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/searchEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -53,14 +53,14 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
+        android:layout_height="0dp"
+        android:id="@+id/listView"
         android:layout_weight="2">
 
 
-    </ScrollView>
+    </ListView>
 
 
 
