220511 첫 번째 화면 연결 에러 해결중 values에 임시 데이터 추가

--- a/app/src/main/res/layout/fragment_study_main.xml
+++ b/app/src/main/res/layout/fragment_study_main.xml
@@ -29,20 +29,18 @@
             android:layout_marginTop="5dp"
             android:background="#cdcdcd" />
 
-        <ScrollView
-            android:id="@+id/scv_studies"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/ll_joined_study_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:fillViewport="true">
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:orientation="horizontal">
 
-            <ListView
-                android:id="@+id/lv_studies"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        </androidx.fragment.app.FragmentContainerView>
 
-        </ScrollView>
+
+
 
     </LinearLayout>
 
