--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,215 +1,244 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/setting_cslayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    android:overScrollMode="never">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/setting_info_cslayout"
+        android:id="@+id/setting_cslayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/setting_others_cslayout">
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp">
 
-        <TextView
-            android:id="@+id/setting_info_tv"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/setting_info_cslayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/setting_others_cslayout"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="계정/정보관리"
-            android:textSize="30sp"/>
+            app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/setting_info_email_ll"
+            <TextView
+                android:id="@+id/setting_info_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="계정/정보관리"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/setting_info_email_ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:background="#98DAFF"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_info_tv">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="이메일"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/setting_info_email_tv"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:text="####gachon.ac.kr"
+                    android:textColor="#BFBFBF"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/setting_info_email_change_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="변경"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/setting_info_phone_ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="#98DAFF"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_info_email_ll">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="휴대폰"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/setting_info_phone_tv"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:text="010-0000-0000"
+                    android:textColor="#BFBFBF"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/setting_info_phone_change_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="변경"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/setting_info_authenticate_ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="#98DAFF"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_info_phone_ll">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="본인인증"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/setting_info_authenticate_tv"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:text="2021.03.02"
+                    android:textColor="#BFBFBF"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/setting_info_authenticate_change_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="확인"
+                    android:textSize="20sp" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/setting_others_cslayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/setting_info_tv"
+            android:layout_marginTop="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="#98DAFF"
-            android:orientation="horizontal"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
-            android:padding="5dp">
+            app:layout_constraintTop_toBottomOf="@id/setting_info_cslayout">
+
             <TextView
-                android:layout_width="100dp"
+                android:id="@+id/setting_alarm_tv"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="이메일"
-                android:textSize="20sp"/>
-            <TextView
-                android:id="@+id/setting_info_email_tv"
-                android:layout_width="180dp"
+                android:text="기타"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="####gachon.ac.kr"
-                android:textColor="#BFBFBF"
-                android:textSize="20sp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="변경"
-                android:textSize="20sp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/setting_info_phone_ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/setting_info_email_ll"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="#98DAFF"
-            android:orientation="horizontal"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:padding="5dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="휴대폰"
-                android:textSize="20sp"/>
-            <TextView
-                android:id="@+id/setting_info_phone_tv"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:text="010-0000-0000"
-                android:textColor="#BFBFBF"
-                android:textSize="20sp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="변경"
-                android:textSize="20sp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/setting_info_authenticate_ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/setting_info_phone_ll"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="#98DAFF"
-            android:orientation="horizontal"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:padding="5dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="본인인증"
-                android:textSize="20sp"/>
-            <TextView
-                android:id="@+id/setting_info_authenticate_tv"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:text="2021.03.02"
-                android:textColor="#BFBFBF"
-                android:textSize="20sp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="확인"
-                android:textSize="20sp"/>
-        </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/setting_alarm_tv">
+
+                <LinearLayout
+                    android:id="@+id/setting_alarm_sound_ll"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="#98DAFF"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:layout_width="280dp"
+                        android:layout_height="wrap_content"
+                        android:text="소리 및 무음   "
+                        android:textSize="20sp" />
+
+                    <Switch
+                        android:id="@+id/setting_alarm_sound_switch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/setting_alarm_ring_ll"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="#98DAFF"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:layout_width="280dp"
+                        android:layout_height="wrap_content"
+                        android:text="진동   "
+                        android:textSize="20sp" />
+
+                    <Switch
+                        android:id="@+id/setting_alarm_ring_switch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/setting_version_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="#98DAFF"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:text="버전   "
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="v.1.0.0 "
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/setting_others_cslayout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/setting_info_cslayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-        <TextView
-            android:id="@+id/setting_alarm_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="기타"
-            android:textSize="30sp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/setting_alarm_tv">
-            <LinearLayout
-                android:id="@+id/setting_alarm_sound_ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#98DAFF"
-                android:orientation="horizontal"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:padding="5dp">
-                <TextView
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:text="소리 및 무음   "
-                    android:textSize="20sp"/>
 
-                <Switch
-                    android:id="@+id/setting_alarm_sound_switch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/setting_alarm_ring_ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#98DAFF"
-                android:orientation="horizontal"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:padding="5dp">
-                <TextView
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:text="진동   "
-                    android:textSize="20sp"/>
-
-                <Switch
-                    android:id="@+id/setting_alarm_ring_switch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/setting_version_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#98DAFF"
-                android:orientation="horizontal"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:padding="5dp">
-                <TextView
-                    android:layout_width="250dp"
-                    android:layout_height="wrap_content"
-                    android:text="버전   "
-                    android:textSize="20sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="v.1.0.0 "
-                    android:textSize="20sp"/>
-            </LinearLayout>
-
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
