--- a/app/src/main/res/layout/activity_login_selection.xml
+++ b/app/src/main/res/layout/activity_login_selection.xml
@@ -18,17 +18,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.339" />
 
-    <Button
-        android:id="@+id/googleLogionButton"
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:text="Google"
-        android:textSize="30dp"
+        android:layout_marginEnd="148dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.555" />
+        app:layout_constraintVertical_bias="0.556" />
 
     <TextView
         android:id="@+id/textView3"
