프래그먼트 백스택 기능 추가로 뒤로가기 구현

--- a/app/src/main/res/layout/fragment_board_item.xml
+++ b/app/src/main/res/layout/fragment_board_item.xml
@@ -58,18 +58,26 @@
                 android:layout_marginTop="5dp"
                 android:textSize="18dp"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="댓글"
+                android:textSize="20dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
-                <TextView
+                <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="댓글"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"/>
+                    android:hint="댓글을 입력하세요"
+                    android:inputType="textMultiLine"
+                    android:layout_weight="2"
+                    android:id="@+id/commentEditText"/>
 
                 <ImageButton
                     android:layout_width="40dp"
