--- a/app/src/main/res/layout/fragment_board_item.xml
+++ b/app/src/main/res/layout/fragment_board_item.xml
@@ -22,12 +22,20 @@
                     android:scaleType="fitXY"
                     android:background="@drawable/anonymous_icon"/>
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/nameTextViewBoardItem"
                     android:text="name"
                     android:textSize="18dp"
                     android:layout_marginLeft="10dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/timeTextView"
+                    android:text="test"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="18dp"/>
 
 
             </LinearLayout>
