--- a/app/src/main/res/layout/fragment_i_calendar.xml
+++ b/app/src/main/res/layout/fragment_i_calendar.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="내용을 입력하세요.iiiiiiii"
+        android:hint="indiv 일정"
         android:inputType="textMultiLine"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +86,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:visibility="invisible"
+        android:textSize="12pt"
         app:layout_constraintBottom_toBottomOf="@+id/contextEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/contextEditText"
