좋아요 기능 구현해야함

--- a/app/src/main/res/layout/fragment_board_comment_item_view.xml
+++ b/app/src/main/res/layout/fragment_board_comment_item_view.xml
@@ -12,12 +12,24 @@
         android:inputType="textMultiLine"
         android:id="@+id/commentContentTextView"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="name"
-        android:gravity="right"
-        android:id="@+id/commentNameTextView"/>
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal">
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/commentWrittenTimeView"
+           android:text="test"/>
+
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="name"
+           android:gravity="right"
+           android:id="@+id/commentNameTextView"/>
+   </LinearLayout>
 
 
 </LinearLayout>
