--- a/app/src/main/res/layout/custom_item_study_find.xml
+++ b/app/src/main/res/layout/custom_item_study_find.xml
@@ -2,14 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_find"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="110dp"
     android:background="#ffffff"
     android:orientation="horizontal">
 
     <View
-        android:id="@+id/divider2"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -22,7 +20,6 @@
         android:orientation="vertical">
 
         <View
-            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_weight="1"
@@ -36,13 +33,12 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/ll_find_study_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="horizontal">
@@ -51,30 +47,40 @@
                         android:id="@+id/tv_study_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:text="스터디 이름" />
 
                     <TextView
                         android:id="@+id/tv_study_member"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="4"
                         android:text="스터디 인원" />
 
                 </LinearLayout>
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="9"
+                    android:layout_margin="1dp"
+                    android:layout_marginLeft="5dp"
                     android:visibility="visible"
                     app:srcCompat="@drawable/ic_lock" />
+
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="1dp"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="관심 스터디 등록"
+                    app:srcCompat="@drawable/ic_heart"
+                    tools:ignore="TouchTargetSizeCheck" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll_tags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
@@ -126,7 +132,7 @@
                 android:id="@+id/et_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="7dp"
+                android:layout_marginTop="10dp"
                 android:ems="1"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
@@ -137,7 +143,6 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_weight="1"
@@ -146,7 +151,6 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/divider4"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
